# forcrat

./: Cargo.toml  LICENSE  rust-toolchain.toml
deps_crate/: Cargo.toml
src/: api_counter.rs  api_list.rs  ast_maker.rs  bit_set.rs  check_unsafety.rs  compile_util.rs  error_analysis.rs  error_finder.rs  extern_finder.rs  file_analysis.rs  format.rs  formatter.rs  graph.rs  lib.rs  likely_lit.rs  preprocessor.rs  printf.rs  return_finder.rs  retval_use_counter.rs  steensgaard.rs  transformation.rs  ty_checker.rs  ty_finder.rs
src/transformation/: hir_ctx.rs  mod.rs  printf.rs  scanf.rs  stream_ty.rs  tests.rs  transform_visitor.rs
